@@ -1,26 +1,38 @@
 package com.example.pseudoranges.models;
 
 import android.app.Application;
-import android.location.GnssMeasurement;
 
 import androidx.annotation.NonNull;
 import androidx.lifecycle.AndroidViewModel;
 
 import com.example.pseudoranges.Clock;
+import com.example.pseudoranges.ConstellationEnum;
+import com.example.pseudoranges.BandEnum;
 import com.example.pseudoranges.Satellite;
 
-import java.text.DecimalFormat;
 import java.util.LinkedHashMap;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class MainViewModel extends AndroidViewModel {
 
     // private MutableLiveData<String> tmpString = new MutableLiveData<>();
-    private Map<String, Map<Integer, Map<String, Satellite>>> measurement = new LinkedHashMap<>();
-    private Clock clock = new Clock();
-    private int measurementState = 0;
+    /*
+        Hashmap
+            Key: GPS, SBAS, GLONASS, QZSS, BEIDOU, GALILEO
+            Value:
+                Hashmap
+                    Key: satellite Id
+                    Value:
+                        Hashmap:
+                            key: frequency level (L1 or L2 or L5 for example)
+                            Value: Satellite
+
+     */
+    private final Map<ConstellationEnum, Map<Integer, Map<BandEnum, Satellite>>> measurement = new LinkedHashMap<>();
+    private final Clock clock = new Clock();
 
     public MainViewModel(@NonNull Application application) {
         super(application);
@@ -30,126 +42,77 @@ public class MainViewModel extends AndroidViewModel {
         return clock;
     }
 
-    public int getState() {
-        return measurementState;
-    }
-
-    public void setState(int newState) {
-        measurementState = newState;
-    }
-
-    public Map<String, Map<Integer, Map<String, Satellite>>> gm() {
+    public Map<ConstellationEnum, Map<Integer, Map<BandEnum, Satellite>>> gm() {
         return measurement;
     }
 
     public String toStringClockClass() {
-        final String format = "%-4s = %s\n";
-        DecimalFormat numberFormat = new DecimalFormat("#0.000");
-
-        String builder = String.format(format, "TimeNanos", clock.TimeNanos) +
-                String.format(
-                        format,
-                        "HardwareClockDiscontinuityCount",
-                        clock.HardwareClockDiscontinuityCount) +
-
         /* Not interesting
-        builder.append(String.format(format, "LeapSecond", clock.LeapSecond));
-
-        builder.append(
-                String.format(format, "TimeUncertaintyNanos", clock.TimeUncertaintyNanos));
-
-        builder.append(String.format(format, "FullBiasNanos", clock.FullBiasNanos));
-
-        builder.append(String.format(format, "BiasNanos", clock.BiasNanos));
-
-        builder.append(
-                String.format(
-                        format,
-                        "BiasUncertaintyNanos",
-                        numberFormat.format(clock.BiasUncertaintyNanos)));
+            "%-4s = %s\n".formatted("LeapSecond", clock.LeapSecond)
+            "%-4s = %s\n".formatted("TimeUncertaintyNanos", clock.TimeUncertaintyNanos)
+            "%-4s = %s\n".formatted("FullBiasNanos", clock.FullBiasNanos)
+            "%-4s = %s\n".formatted("BiasNanos", clock.BiasNanos)
+            "%-4s = %.3f\n".formatted("BiasUncertaintyNanos", clock.BiasUncertaintyNanos)
          */
-                String.format(
-                        format,
-                        "DriftNanosPerSecond",
-                        numberFormat.format(clock.DriftNanosPerSecond)) +
-                String.format(
-                        format,
-                        "DriftUncertaintyNanosPerSecond",
-                        numberFormat.format(clock.DriftUncertaintyNanosPerSecond)) +
-
-                //builder.append("\n");
-
-                String.format(Locale.ENGLISH,
-                        "%s = %d\n",
-                        "Age",
-                        (System.currentTimeMillis() - clock.AgeData) / 1000) +
-
-                // Log.e("Clock", "Full Bias Nano: " + clock.FullBiasNanos + " Time Nanos: " + clock.TimeNanos + " bias Nanos: " + clock.BiasNanos);
-
-                // Add getAccumulatedDeltaRangeState STATE
-                String.format(Locale.ENGLISH,
-                        "%s = %s\n",
-                        "ADR State ",
-                        parseAccumulatedDeltaRangeState(getState()));
-
-        return builder;
+        // Log.e("Clock", "Full Bias Nano: " + clock.FullBiasNanos + " Time Nanos: " + clock.TimeNanos + " bias Nanos: " + clock.BiasNanos);
+        return """
+            TimeNanos = %d
+            HardwareClockDiscontinuityCount = %d
+            DriftNanosPerSecond = %.3f
+            DriftUncertaintyNanosPerSecond = %.3f
+            Age = %d
+            Received Measurements = %d
+            """.formatted(
+            clock.TimeNanos,
+            clock.HardwareClockDiscontinuityCount,
+            clock.DriftNanosPerSecond,
+            clock.DriftUncertaintyNanosPerSecond,
+            (System.currentTimeMillis() - clock.AgeData) / 1000,
+            clock.ReceivedMeasurements
+        );
     }
 
-    private String parseAccumulatedDeltaRangeState(int state) {
-        String sValue = "";
-        // ADR_STATE_UNKNOWN = 0
-        if (((byte) state) == GnssMeasurement.ADR_STATE_UNKNOWN) {
-            sValue += "ADR_STATE_UNKNOWN "; // 0
-        }
-        if (((byte) state & GnssMeasurement.ADR_STATE_VALID) == GnssMeasurement.ADR_STATE_VALID) {
-            sValue += "ADR_STATE_VALID "; // 1
-        }
-        if (((byte) state & GnssMeasurement.ADR_STATE_RESET) == GnssMeasurement.ADR_STATE_RESET) {
-            sValue += "ADR_STATE_RESET "; // 2
-        }
-        if (((byte) state & GnssMeasurement.ADR_STATE_CYCLE_SLIP) == GnssMeasurement.ADR_STATE_CYCLE_SLIP) {
-            sValue += "ADR_STATE_CYCLE_SLIP "; // 4
-        }
-        if (((byte) state & GnssMeasurement.ADR_STATE_HALF_CYCLE_RESOLVED) == GnssMeasurement.ADR_STATE_HALF_CYCLE_RESOLVED) {
-            sValue += "ADR_STATE_HALF_CYCLE_RESOLVED "; // 8
-        }
-        if (((byte) state & GnssMeasurement.ADR_STATE_HALF_CYCLE_REPORTED) == GnssMeasurement.ADR_STATE_HALF_CYCLE_REPORTED) {
-            sValue += "ADR_STATE_HALF_CYCLE_REPORTED "; // 16
-        }
-        return sValue;
-    }
-
-    public String toStringMeasurementMap(String filterConstellation, Integer filterTime) {
-        StringBuilder builder = new StringBuilder("\n");
-        builder.append("Созвездие\t Спутник Расст(км) фаза возраст\n");
-        for (Map.Entry<String, Map<Integer, Map<String, Satellite>>> constellationEntry : measurement.entrySet()) {
-            if (!Objects.equals(filterConstellation, constellationEntry.getKey()) || Objects.equals(constellationEntry.getKey(), "UNKNOWN")) {
-                continue;
-            }
-            for (Map.Entry<Integer, Map<String, Satellite>> freqEntry : constellationEntry.getValue().entrySet()) {
-                for (Map.Entry<String, Satellite> satelliteEntry : freqEntry.getValue().entrySet()) {
-                    // Skip bad values
-                    if (!satelliteEntry.getValue().Valid) {
-                        continue;
-                    }
-                    // Age Seconds
-                    long age = (System.currentTimeMillis() - satelliteEntry.getValue().AgeData) / 1000;
-                    // Skip old values
-                    if (filterTime != 0) {
-                        if (age > filterTime) {
-                            continue;
-                        }
-                    }
-                    builder.append(String.format(
-                            Locale.ENGLISH,
-                            "%-7s \t\t\t%3d(%s)  %6.0f \t\t\t%s\t\t\t%s\n",
-                            //constellationEntry.getKey(), satelliteEntry.getValue().INDEX, satelliteEntry.getValue().PRM, satelliteEntry.getValue().CarrierPhase));
-                            constellationEntry.getKey(), satelliteEntry.getValue().INDEX, satelliteEntry.getKey(), satelliteEntry.getValue().PRM / 1000, satelliteEntry.getValue().PHASE, age)
-                    );
-                }
-            }
-        }
-        return builder.toString();
+    synchronized public String toStringMeasurementMap(ConstellationEnum filterConstellation, Integer filterTime, boolean checkValidity) {
+        return measurement
+            .entrySet()
+            .stream()
+            .filter(constellation -> constellation.getKey().equals(filterConstellation))
+            .flatMap(constellation ->
+                constellation
+                    .getValue()
+                    .values()
+                    .stream()
+                    .map(
+                        stringSatelliteMap -> stringSatelliteMap
+                            .entrySet()
+                            .stream()
+                            .filter(satellite -> {
+                                if (checkValidity) {
+                                    return satellite.getValue().Valid;
+                                } else {
+                                    return true;
+                                }
+                            })
+                            .map(satellite -> {
+                                    long age = (System.currentTimeMillis() - satellite.getValue().AgeData) / 1000;
+                                    if (filterTime != 0 && age > filterTime) {
+                                        return null;
+                                    }
+                                    return "%-7s \t\t\t%3d(%s)  %6.0f \t\t\t%s\t\t\t%s".formatted(
+                                        /* GPS */  constellation.getKey(),
+                                        /* satellite Id*/ satellite.getValue().INDEX,
+                                        /*satellite frequency L1 or L5 or L2*/ satellite.getKey().name(),
+                                        /*range meters /1000 = km*/ satellite.getValue().PRM / 1000d,
+                                        /*kind of phase*/ satellite.getValue().PHASE,
+                                        /*age of info in secs*/ age
+                                    );
+                                }
+                            )
+                    )
+            )
+            .flatMap(Function.identity())
+            .filter(Objects::nonNull)
+            .collect(Collectors.joining("\n", "Созвездие\t Спутник Расст(км) фаза возраст\n", ""));
     }
 
 }
